<resources>
    <string name="app_name">Lab01_2c</string>

    <string name="sign_in">Sign in</string>

    <string name="username">Username:</string>

    <string name="password">Password:</string>

    <string name="sign_up">Sign up</string>

    <string name="sign_in_via_facebook">Sign in via Facebook</string>
    <string name="name_gmail_com">name@gmail.com</string>
    <string name="invisible_password">*******</string>
</resources>